@@ -5,7 +5,7 @@ public interface CompressionType {
 	Important! Constant values should correspond to:
 	http://trac.imagemagick.org/browser/ImageMagick/trunk/magick/compress.h?annotate=blame&rev=HEAD
 	see IM which version in http://www.imagemagick.org/script/changelog.php or
-	http://trac.imagemagick.org/browser/ImageMagick/trunk/version.sh?rev=10867
+	http://trac.imagemagick.org/browser/ImageMagick/trunk/version.sh
 */
 		public final static int UndefinedCompression = 0;
 		public final static int NoCompression = 1;
@@ -23,5 +23,14 @@ public interface CompressionType {
 		public final static int LZWCompression = 11;
 		public final static int RLECompression = 12;
 		public final static int ZipCompression = 13;  // IM Revision 10867
+
+
+    // The following have been added after ImageMagick-6.4.1-2 and before 6.5.7-6
+    // (exact time not known). Using them is untested.
+    public final static int ZipSCompression = 14;
+    public final static int PizCompression = 15;
+    public final static int Pxr24Compression = 16;
+    public final static int B44Compression = 17;
+    public final static int B44ACompression = 18;
 
 }
