@@ -2,6 +2,8 @@ package magick;
 
 /**
  * Corresponds to the ImageMagick enumerated type of the same name.
+ * Important! Constant values should correspond to:
+ * http://trac.imagemagick.org/browser/ImageMagick/trunk/magick/image.h
  *
  * @author Eric Yeo
  */
@@ -13,4 +15,10 @@ public interface InterlaceType {
     public final static int PlaneInterlace = 3;
     public final static int PartitionInterlace = 4;
 
+
+    // The following have been added after ImageMagick-6.4.1-2 and before 6.5.7-6
+    // (exact time not known). Using them is untested.
+    public final static int GIFInterlace = 5;
+    public final static int JPEGInterlace = 6;
+    public final static int PNGInterlace = 7;
 }
