@@ -3,6 +3,9 @@ package magick;
 /**
  * Corresponds to the ImageMagick enumerated type of the same name.
  *
+ * Important! Constant values should correspond to:
+ * http://trac.imagemagick.org/browser/ImageMagick/trunk/magick/quantum.h
+ *
  * @author Eric Yeo
  */
 public interface QuantumTypes {
@@ -29,4 +32,11 @@ public interface QuantumTypes {
     public static final int GrayPadQuantum = 19;
     public static final int RGBPadQuantum = 20;
 
+    // The following have been added after ImageMagick-6.4.1-2 and before 6.5.7-6
+    // (exact time not known). Using them is untested.
+
+    public static final int CbYCrYQuantum = 21;
+    public static final int CbYCrQuantum = 22;
+    public static final int CbYCrAQuantum = 23;
+    public static final int CMYKOQuantum = 24;
 }
